[build-system]

requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"


[project]

name = "pullobj"
version = "0.1.0"
authors = [{ name = "cvisinoni" }]
description = "A Python library for synchronizing remote objects to local files"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.urls]

Homepage = "https://github.com/cvisinoni/pullobj"
Issues = "https://github.com/cvisinoni/pullobj/issues"


[tool.hatch.build]

exclude = ["tests/**", "*.pyc", ".github/**", '/example.py']